Fixed goofy ahh vertical scrollbar

--- a/tranchui-latest.css
+++ b/tranchui-latest.css
@@ -270,7 +270,7 @@ input {
     margin: 0 auto;
     border-radius: 5px;
     border: 1px rgb(25, 25, 25) solid;
-    width: 90%;
+    width: 80%;
     height: 300%;
     overflow-x: hidden;
     z-index: 40000000000000000000;
